<resources>
    <string name="app_name">Geaux UREC</string>

    <string name="arms">Arms</string>
    <string name="legs">Legs</string>
    <string name="back">Back</string>
    <string name="shoulders">Shoulders</string>
    <string name="dumbbells">Dumbbells</string>
    <string name="seated_dips">Seated Dips</string>
    <string name="kettlebells">Kettlebells</string>
    <string name="arm_curl_technogym">Arm Curl (TechnoGym)</string>
    <string name="dual_action_pulleys_technogym">Dual Action Pulleys (TechnoGym)</string>
    <string name="multi_jungle_station">Multi-Jungle Station</string>
    <string name="leg_press">Leg Press</string>
    <string name="power_rack">Power Rack</string>
    <string name="leg_curls">Leg Curls</string>
    <string name="leg_extensions">Leg Extensions</string>
    <string name="calf_raises">Calf Raises</string>
    <string name="cable_column">Cable Column</string>
    <string name="pull_up_bar">Pull Up Bar</string>
    <string name="rowers">Rowers</string>
    <string name="pec_dec_machines">Pec Dec Machines</string>
    <string name="military_press">Military Press</string>
    <string name="shoulder_press">Shoulder Press</string>
    <string name="shoulder_raise_machine">Shoulder Raise Machine</string>


    <string name="locationDumbbells">Location</string>
    <string name="locationSeatedDips">Location</string>
    <string name="locationKettlebells">Location</string>
    <string name="locationArmCurl">Location</string>
    <string name="locationDualActionPulley">Location</string>
    <string name="locationMultiJungleStation">Location</string>
    <string name="locationLegPress">Location</string>
    <string name="locationPowerRack">Location</string>
    <string name="locationLegCurls">Location</string>
    <string name="locationLegExtensions">Location</string>
    <string name="locationCalfRaises">Location</string>
    <string name="locationCableColumn">Location</string>
    <string name="locationPullUpBar">Location</string>
    <string name="locationRowers">Location</string>
    <string name="locationPecDecMachine">Location</string>
    <string name="locationMilitaryPress">Location</string>
    <string name="locationShoulderPress">Location</string>
    <string name="locationShoulderRaiseMachine">Location</string>


    <string name="first_floor">First Floor</string>
    <string name="second_floor">Second Floor</string>
    <string name="dumbbells_floor_1">Dumbbells: Floor 1</string>
    <string name="dumbbells_location">Dumbbells Location</string>
    <string name="dualActionPulley_floor_1">Dual Action Pulley: \nFloor 1</string>
    <string name="dualActionPulley_location">Dual Action Pulley Location</string>
    <string name="kettlebells_floor_1">Kettlebells: Floor 1</string>
    <string name="kettlebells_location">Kettlebells Location</string>
    <string name="multi_jungle_station_floor_1">Multi Jungle Station: \nFloor 1</string>
    <string name="multi_jungle_station_location">Multi Jungle Station Location</string>
    <string name="seated_dips_floor_1">Seated Dips: Floor 1</string>
    <string name="seated_dips_location">Seated Dips Location</string>
    <string name="arm_curls_floor_1">Arm Curls: Floor 1</string>
    <string name="arm_curls_location">Arm Curls Location</string>
    <string name="pec_dec_floor_2">Pec Dec: Floor 2</string>
    <string name="pec_dec_location">Pec Dec Location</string>
    <string name="pull_up_bar_floor_2">Pull Up Bar: Floor 2</string>
    <string name="pull_up_bar_location">Pull Up Bar Location</string>
    <string name="rowers_floor_2">Rowers: Floor 2</string>
    <string name="rowers_location">Rowers Location</string>
    <string name="cable_column_floor_2">Cable Column: Floor 2</string>
    <string name="cable_column_location">Cable Column Location</string>
    <string name="calf_raises_floor_1">Calf Raises: Floor 1</string>
    <string name="calf_raises_location">Calf Raises Location</string>
    <string name="leg_curls_floor_1">Leg Curls: Floor 1</string>
    <string name="leg_curls_location">Leg Curls Location</string>
    <string name="leg_extensions_floor_1">Leg Extensions: Floor 1</string>
    <string name="leg_extensions_location">Leg Extensions Location</string>
    <string name="leg_press_floor_1">Leg Press: Floor 1</string>
    <string name="leg_press_location">Leg Press Location</string>
    <string name="military_press_floor_1">Military Press: Floor 1</string>
    <string name="military_press_location">Military Press Location</string>
    <string name="shoulder_press_floor_1">Shoulder Press: Floor 1</string>
    <string name="shoulder_press_location">Shoulder Press Location</string>
    <string name="shoulder_raises_floor_2">Shoulder Raises: Floor 2</string>
    <string name="shoulder_raises_location">Shoulder Raises Location</string>
    <string name="power_rack_floor_1">Power Rack: Floor 1</string>
    <string name="power_rack_location">Power Rack Location</string>

    <string name="edit_message">Enter Your Name</string>
    <string name="button_send">Send</string>

</resources>