<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/Arms"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="55dp"
        android:text="@string/arms"
        android:onClick="sendArms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Legs"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="230dp"
        android:layout_marginTop="55dp"
        android:onClick="sendLegs"
        android:text="@string/legs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Back"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="230dp"
        android:onClick="sendBack"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Shoulders"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="230dp"
        android:layout_marginTop="230dp"
        android:onClick="sendShoulders"
        android:text="@string/shoulders"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>