<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BackMachinePecDecMachine">

    <ImageView
        android:id="@+id/PecDecLocation"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/pec_dec_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PecDecText"
        app:srcCompat="@drawable/pecdec" />

    <ImageView
        android:id="@+id/SecondFloor"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/second_floor"
        app:layout_constraintBottom_toTopOf="@+id/PecDecText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/secondfloor" />

    <TextView
        android:id="@+id/PecDecText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="10dp"
        android:text="@string/pec_dec_floor_2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/PecDecLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SecondFloor" />

</androidx.constraintlayout.widget.ConstraintLayout>